# NTO-AI-video-classification

./: .gitignore  Dockerfile  README.md  build-solution.sh  pyproject.toml
solution/: metadata.json  run.py
