[tool.poetry]
name = "nto-ai-2022"
version = "1.0.0"
description = ""
authors = ["AlanTheKnight <51376126+AlanTheKnight@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ftfy = "^6.1.1"
regex = "^2022.10.31"
tqdm = "^4.64.1"
opencv-python = "^4.6.0"
numpy = "^1.23.5"
pandas = "^1.5.2"
clip = { git = "https://github.com/openai/CLIP.git", branch = "main" }
torch = "^1.13.1"
torchvision = "^0.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
